--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "rememberer-chrome-app",
   "version": "1.0.0",
   "description": "Learn foreign languages listening as me",
-  "main": "manifest.json",
+  "main": "src/manifest.json",
   "scripts": {
-    "start": "svelte compile src/Main.svelte > dist/main.js",
+    "start": "cross-env NODE_ENV=development webpack --config build/webpack.config.js",
+    "prod": "cross-env NODE_ENV=production webpack --config build/webpack.config.js",
+    "start1": "svelte compile src/pages/Main.svelte > dist/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,7 +24,16 @@
     "url": "https://github.com/KnightSlayer/rememberer-chrome-app/issues"
   },
   "homepage": "https://github.com/KnightSlayer/rememberer-chrome-app#readme",
-  "dependencies": {
-    "svelte-cli": "^3.0.0"
+  "dependencies": {},
+  "devDependencies": {
+    "cross-env": "^5.2.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "path": "^0.12.7",
+    "svelte": "^3.5.3",
+    "svelte-cli": "^3.0.0",
+    "svelte-loader": "^2.13.4",
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.4",
+    "webpack-notifier": "^1.7.0"
   }
 }
