--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack --config build/webpack.config.js",
     "prod": "cross-env NODE_ENV=production webpack --config build/webpack.config.js",
-    "start1": "svelte compile src/pages/Main.svelte > dist/main.js",
+    "start1": "svelte compile src/pages/main/Main.svelte > dist/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/KnightSlayer/rememberer-chrome-app#readme",
   "dependencies": {},
   "devDependencies": {
+    "copy-webpack-plugin": "^5.0.3",
     "cross-env": "^5.2.0",
     "mini-css-extract-plugin": "^0.7.0",
     "path": "^0.12.7",
