--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,7 +3,7 @@
   "version": "1.0",
   "description": "Learn language by learning phrases on YouTube",
   "icons": {
-    "128":"icon-128.png"
+    "128":"assets/icon-128.png"
   },
   "browser_action": {},
   "background": {
