--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,6 +10,8 @@
     "scripts": ["background.js"],
     "persistent": false
   },
-  "permissions": [],
+  "permissions": [
+    "storage"
+  ],
   "manifest_version": 2
 }
