--- a/Nested/package.json
+++ b/Nested/package.json
@@ -2,21 +2,23 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
+    "fs": "0.0.1-security",
     "npm-run-all": "^4.1.5",
+    "path": "^0.12.7",
     "rollup": "^1.12.0",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^4.0.4",
-    "svelte": "^3.0.0"
+    "svelte": "^3.6.9"
   },
   "dependencies": {
     "sirv-cli": "^0.4.4"
   },
   "scripts": {
-    "build": "rollup -c",
-    "autobuild": "rollup -c -w",
+    "build": "rollup -c build/rollup.config.js",
+    "autobuild": "rollup -c build/rollup.config.js -w",
     "dev": "run-p start:dev autobuild",
     "start": "sirv public --single",
     "start:dev": "sirv public --single --dev"
