--- a/package.json
+++ b/package.json
@@ -1,40 +1,25 @@
 {
-  "name": "rememberer-chrome-app",
+  "name": "svelte-app",
   "version": "1.0.0",
-  "description": "Learn foreign languages listening as me",
-  "main": "src/manifest.json",
-  "scripts": {
-    "start": "cross-env NODE_ENV=development webpack --config build/webpack.config.js",
-    "prod": "cross-env NODE_ENV=production webpack --config build/webpack.config.js",
-    "start1": "svelte compile src/pages/main/Main.svelte > dist/main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/KnightSlayer/rememberer-chrome-app.git"
-  },
-  "keywords": [
-    "learning",
-    "language",
-    "listening"
-  ],
-  "author": "Edgar Abgaryan",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/KnightSlayer/rememberer-chrome-app/issues"
-  },
-  "homepage": "https://github.com/KnightSlayer/rememberer-chrome-app#readme",
-  "dependencies": {},
   "devDependencies": {
-    "copy-webpack-plugin": "^5.0.3",
-    "cross-env": "^5.2.0",
-    "mini-css-extract-plugin": "^0.7.0",
+    "fs": "0.0.1-security",
+    "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
-    "svelte": "^3.5.3",
-    "svelte-cli": "^3.0.0",
-    "svelte-loader": "^2.13.4",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.4",
-    "webpack-notifier": "^1.7.0"
+    "rollup": "^1.12.0",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-copy": "^3.1.0",
+    "rollup-plugin-generate-html-template": "^1.2.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-terser": "^4.0.4",
+    "svelte": "^3.6.9"
+  },
+  "dependencies": {
+    "sirv-cli": "^0.4.4"
+  },
+  "scripts": {
+    "start": "npm run dev",
+    "build": "rollup -c build/rollup.config.js",
+    "dev": "rollup -c build/rollup.config.js -w"
   }
 }
